# FACS

./: AGENTS.md  BUILD.md  CMakeLists.txt  PLOT_README.md  build_web.sh  plot_continuum.py  plot_continuum_old.py  plot_interpolation_test.py  plot_resonance_continuum.py
.github/workflows/: update-cf.yml
docs/: alfvenicity_implementation.md  code_cleanup_summary.md  continuum_with_sound_coupling_renaming.md  degenerate_eigenvalue_analysis.md  gp_rt_normalization.md  header_renaming.md  renaming_summary.md  test_file_removal.md
include/: Floquet_two_dof.h  clap.h  equilibrium.h  gFileRawData.h  intp.h  spdata.h  two_dof_continuum.h  util.h
src/: continuum_with_sound_coupling.cpp  gFileRawData.cpp  index_template.html  main.cpp  test_equilibrium_list.cpp  test_interpolation.cpp  test_resonance_continuum.cpp  test_single_surface.cpp  test_two_dof.cpp
